--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.28.4",
-    "babel-loader": "^0.0.1-security"
+    "axios": "^1.13.2",
+    "babel-loader": "^0.0.1-security",
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
+    "bootstrap-vue-3": "^0.3.12",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
