--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "core-js": "^3.47.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.5",
+    "playwright": "^1.57.0",
     "sass": "^1.94.2",
     "sass-loader": "^16.0.6",
     "ts-loader": "^9.5.4",
